--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Trishia Memories
 tagline: A memories worth remembering
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-GH is a template for creating small digital collection exhibits on GitHub Pages designed for teaching digital library skills"
+description: "Trishia’s Memories is a place for remembering—moments, people, and experiences that left a mark and continue to shape the present."
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Trishia Mikaella P. Usa
 
